# api/src/modules/user/routes/updateUser.ts
@@ -1,0 +1,21 @@
+import { FastifyInstance } from 'fastify';
+
+import { $ref } from '../user.schema';
+import { updateUserHandler } from '../user.usecase';
+
+export const updateUser = async (server: FastifyInstance) => {
+  server.put(
+    '/user/:id',
+    {
+      schema: {
+        params: $ref('updateUserParam'),
+        body: $ref('updateUserBody'),
+        response: {
+          200: $ref('updateUserResponse'),
+        },
+        tags: ['User'],
+      },
+    },
+    updateUserHandler
+  );
+};
